--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "fc": "^1.6.1",
     "formik": "^2.2.9",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.8.0",
+    "horizontal": "^0.2.2",
+    "keydown": "^0.0.3",
+    "modal": "^1.2.0",
+    "modern-normalize": "^1.1.0",
+    "nanoid": "^4.0.1",
+    "overlay": "^1.2.5",
+    "photo": "^0.2.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prop-types": "^15.8.1"
   }
 }
